@@ -8,6 +8,11 @@ current
 Features added
 --------------
 
+* List-like ``Element.extend()`` method
+
+* Comments and processing instructions return '<!-- coment -->' and
+  '<?pi-target content?>' for repr()
+
 * Parsers are now the preferred (and default) place where element class lookup
   schemes should be registered.  Namespace lookup is no longer supported by
   default.
